# pox-bot

./: .env-sample  .gitignore  README.md  babel.cfg  bot.py  classes.py  config.yml  crowdin.yml  data.py  duhhhhhhhh.txt  main.py  pyproject.toml  stuff.py
.github/workflows/: crowdin.yml
cogs/: activity.py  blacklist.py  calculator.py  channel.py  chat.py  chatbot.py  checker.py  contributors.py  converters.py  counts.py  cserver.py  detector.py  dm.py  economy.py  eew.py.gg  filtering.py  fun.py  generator.py  get_api.py  giveaway.py  globalchat.py  help.py  image.py  info.py  language.py.gg  leaderboard.py  leveling.py  limit_botinvite.py  logger.py  message.py  minecraft.py  moderation.py  others.py  random.py  rating.py  reaction-roles.py  roblox_api.py  role.py  search.py  settings.py  (+7 more)
locales/: en-US.json  en.json  es.json  ja.json  ru.json  vi.json
resources/: .gitignore  README.md  available_languages.json  contributors.v2.json  status.txt
resources/locales/: en.json
resources/locales/ar/: command.json  context_menu.json  core.json  error.json  label.json  messages.json  modal.json  settings.json  text.json
resources/locales/en/: command.json  context_menu.json  error.json  label.json  messages.json  modal.json  settings.json
resources/locales/es/: command.json  context_menu.json  core.json  error.json  label.json  messages.json  modal.json  settings.json  text.json
resources/locales/ja/: command.json  context_menu.json  core.json  error.json  label.json  messages.json  modal.json  settings.json  text.json
resources/locales/ru/: command.json  context_menu.json  core.json  error.json  label.json  messages.json  modal.json  settings.json  text.json
resources/locales/tl/: command.json  core.json  (+1 more)
resources/sqls/: economy.sql  guild_settings.sql  settings.sql  stats.sql  user_stats.sql
src/: i18n.py  model.py  models.py  performance_gui.py  translator.py
src/database/: __init__.py  base.py  economy.py  guild.py  guild_v2.py  modules.py  settings.py  stats.py
src/models/: __init__.py  economy.py  guild_settings.py  guild_settings_v2.py  stats.py  user_settings.py
src/utils/: __init__.py  cache.py  gender.py
(+10 files in other folders)
